--- a/agijagi/app/src/main/res/menu/menu_bottom_navigation_mainactivity.xml
+++ b/agijagi/app/src/main/res/menu/menu_bottom_navigation_mainactivity.xml
@@ -3,30 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/homefragment"
+        android:id="@+id/homeFragment"
         android:enabled="true"
         android:icon="@drawable/home_24px"
         android:title="홈"/>
     <item
-        android:id="@+id/categoryfragment"
+        android:id="@+id/categoryFragment"
         android:enabled="true"
         android:icon="@drawable/menu_24px"
         android:title="카테고리"
         />
     <item
-        android:id="@+id/shippingfragment"
+        android:id="@+id/orderFragment"
         android:enabled="true"
         android:icon="@drawable/local_shipping_24px"
         android:title="주문/배송"
         />
     <item
-        android:id="@+id/favoritefragment"
+        android:id="@+id/wishListFragment"
         android:enabled="true"
         android:icon="@drawable/favorite_24px"
-        android:title="찜"
-         />
+        android:title="찜" />
     <item
-        android:id="@+id/mypagefragment"
+        android:id="@+id/sellerMypageFragment"
         android:enabled="true"
         android:icon="@drawable/person_24px"
         android:title="내 정보"
