--- a/agijagi/app/src/main/res/menu/menu_home.xml
+++ b/agijagi/app/src/main/res/menu/menu_home.xml
@@ -11,11 +11,10 @@
         />
 
     <item
-        android:id="@+id/shoppingbag"
+        android:id="@+id/menu_home_shopping_list"
         android:enabled="true"
         android:icon="@drawable/shopping_bag_24px"
-        android:title="검색창"
-        app:showAsAction="ifRoom"
-        />
+        android:title="장바구니"
+        app:showAsAction="ifRoom" />
 
 </menu>
