Design: Order Made Category 화면 연결 #56 툴바 : 백버튼 -> 카테고리 화면, 장바구니 -> 장바구니 화면 Order Made Category 메뉴 -> All, Plate, Cup, Bowl 화면 fragment_order_made_category.xml 컨벤션 따라 id 수정

--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -233,6 +233,12 @@
         <action
             android:id="@+id/action_orderMadeCategoryFragment_to_categoryFragment"
             app:destination="@id/categoryFragment" />
+        <action
+            android:id="@+id/action_orderMadeCategoryFragment_to_categoryDetailFragment"
+            app:destination="@id/categoryDetailFragment" />
+        <action
+            android:id="@+id/action_orderMadeCategoryFragment_to_shoppingListFragment"
+            app:destination="@id/shoppingListFragment" />
     </fragment>
     <fragment
         android:id="@+id/productAddFragment"
