Design: 장바구니 화면 연결 #56 툴바 : 백버튼 -> 홈화면

--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -142,6 +142,9 @@
         <action
             android:id="@+id/action_shoppingListFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
+        <action
+            android:id="@+id/action_shoppingListFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/userChatListFragment"
