--- a/agijagi/app/src/main/res/layout/item_product_add_add_plan.xml
+++ b/agijagi/app/src/main/res/layout/item_product_add_add_plan.xml
@@ -8,6 +8,7 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="@color/jagi_ivory"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,10 +20,11 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/agijagi_logo" />
+            app:srcCompat="@drawable/agijagi_logo_vector_square" />
 
     </com.google.android.material.card.MaterialCardView>
 
