--- a/agijagi/app/src/main/res/layout/fragment_shipping_add.xml
+++ b/agijagi/app/src/main/res/layout/fragment_shipping_add.xml
@@ -1,14 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".buyermypage.ShippingAddFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar_shipping_add"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.AgijagiToolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/arrow_back_24px"
+        app:title="배송지 등록" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="신규 배송지 등록"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_shipping_add" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editinputlayout_shipping_add_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:boxStrokeColor="@color/jagi_brown"
+        app:hintEnabled="false"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editinput_shipping_add_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/narrow_box_rounded_button_stroke"
+            android:hint="배송지명" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editinputlayout_shipping_add_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:boxStrokeColor="@color/jagi_brown"
+        app:hintEnabled="false"
+        app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_add_title">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editinput_shipping_add_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/narrow_box_rounded_button_stroke"
+            android:hint="배송지주소" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editinputlayout_shipping_add_address_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:boxStrokeColor="@color/jagi_brown"
+        app:hintEnabled="false"
+        app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_add_address">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editinput_shipping_add_address_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/narrow_box_rounded_button_stroke"
+            android:hint="상세주소" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editinputlayout_shipping_add_recipient"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:boxStrokeColor="@color/jagi_brown"
+        app:hintEnabled="false"
+        app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_add_address_detail">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editinput_shipping_add_recipient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/narrow_box_rounded_button_stroke"
+            android:hint="수령인" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editinputlayout_shipping_add_recipient_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:boxStrokeColor="@color/jagi_brown"
+        app:hintEnabled="false"
+        app:layout_constraintTop_toBottomOf="@+id/editinputlayout_shipping_add_recipient">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editinput_shipping_add_recipient_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/narrow_box_rounded_button_stroke"
+            android:hint="수령인 연락처" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_shipping_add_registration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/wide_box_bottom_active"
+        android:text="등록"
+        android:textColor="@color/jagi_hint_color"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
