--- a/agijagi/app/src/main/res/layout/fragment_signup_select.xml
+++ b/agijagi/app/src/main/res/layout/fragment_signup_select.xml
@@ -57,6 +57,8 @@
                 android:orientation="vertical"
                 android:layout_marginStart="104dp"
                 android:layout_marginEnd="104dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:background="@drawable/signup_box_rounded_selected_button"
                 android:layout_centerHorizontal="true">
 
@@ -93,6 +95,8 @@
                 android:layout_marginStart="104dp"
                 android:layout_marginEnd="104dp"
                 android:layout_marginTop="24dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:background="@drawable/signup_box_rounded_selected_button"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/textview_signup_select_seller">
