Design: 화면 연결 추가 #56

--- a/agijagi/app/src/main/res/menu/menu_bottom_navigation_mainactivity.xml
+++ b/agijagi/app/src/main/res/menu/menu_bottom_navigation_mainactivity.xml
@@ -25,7 +25,7 @@
         android:icon="@drawable/favorite_24px"
         android:title="찜" />
     <item
-        android:id="@+id/sellerMypageFragment"
+        android:id="@+id/buyerMypageFragment"
         android:enabled="true"
         android:icon="@drawable/person_24px"
         android:title="내 정보"
