--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -34,12 +34,14 @@
         <action
             android:id="@+id/action_homeFragment_to_productDetailFragment"
             app:destination="@id/productDetailFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_buyerMypageFragment"
+            app:destination="@id/buyerMypageFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="likelion.project.agijagi.search.SearchFragment"
-        android:label="fragment_search"
-        tools:layout="@layout/fragment_search" >
+        android:label="fragment_search">
         <action
             android:id="@+id/action_searchFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -47,8 +49,7 @@
     <fragment
         android:id="@+id/wishListFragment"
         android:name="likelion.project.agijagi.wishlist.WishListFragment"
-        android:label="fragment_wish_list"
-        tools:layout="@layout/fragment_wish_list" >
+        android:label="fragment_wish_list">
         <action
             android:id="@+id/action_wishListFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -56,8 +57,7 @@
     <fragment
         android:id="@+id/orderFragment"
         android:name="likelion.project.agijagi.order.OrderFragment"
-        android:label="fragment_order"
-        tools:layout="@layout/fragment_order" >
+        android:label="fragment_order">
         <action
             android:id="@+id/action_orderFragment_to_deliveryTrackingFragment"
             app:destination="@id/deliveryTrackingFragment" />
@@ -66,7 +66,7 @@
         android:id="@+id/paymentFragment"
         android:name="likelion.project.agijagi.purchase.PaymentFragment"
         android:label="fragment_payment"
-        tools:layout="@layout/fragment_payment" >
+        >
         <action
             android:id="@+id/action_paymentFragment_to_purchaseCompleteFragment"
             app:destination="@id/purchaseCompleteFragment" />
@@ -81,7 +81,7 @@
         android:id="@+id/customProductDetailFragment"
         android:name="likelion.project.agijagi.product.CustomProductDetailFragment"
         android:label="fragment_custom_product_detail"
-        tools:layout="@layout/fragment_custom_product_detail" >
+         >
         <action
             android:id="@+id/action_customProductDetailFragment_to_customOptionFragment"
             app:destination="@id/customOptionFragment" />
@@ -99,7 +99,7 @@
         android:id="@+id/customOptionFragment"
         android:name="likelion.project.agijagi.productoption.CustomOptionFragment"
         android:label="fragment_custom_option"
-        tools:layout="@layout/fragment_custom_option" >
+         >
         <action
             android:id="@+id/action_customOptionFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
@@ -111,7 +111,7 @@
         android:id="@+id/productDetailFragment"
         android:name="likelion.project.agijagi.product.ProductDetailFragment"
         android:label="fragment_product_detail"
-        tools:layout="@layout/fragment_product_detail" >
+        >
         <action
             android:id="@+id/action_productDetailFragment_to_readyMadeOptionFragment"
             app:destination="@id/readyMadeOptionFragment" />
@@ -129,7 +129,7 @@
         android:id="@+id/readyMadeOptionFragment"
         android:name="likelion.project.agijagi.productoption.ReadyMadeOptionFragment"
         android:label="fragment_ready_made_option"
-        tools:layout="@layout/fragment_ready_made_option" >
+        >
         <action
             android:id="@+id/action_readyMadeOptionFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
@@ -138,7 +138,7 @@
         android:id="@+id/shoppingListFragment"
         android:name="likelion.project.agijagi.shopping.ShoppingListFragment"
         android:label="fragment_shopping_list"
-        tools:layout="@layout/fragment_shopping_list" >
+        >
         <action
             android:id="@+id/action_shoppingListFragment_to_paymentFragment"
             app:destination="@id/paymentFragment" />
@@ -150,7 +150,7 @@
         android:id="@+id/userChatListFragment"
         android:name="likelion.project.agijagi.userchat.UserChatListFragment"
         android:label="fragment_user_chat_list"
-        tools:layout="@layout/fragment_user_chat_list" >
+         >
         <action
             android:id="@+id/action_userChatListFragment_to_userChatRoomFragment"
             app:destination="@id/userChatRoomFragment" />
@@ -159,7 +159,7 @@
         android:id="@+id/sellerProductDetailFragment"
         android:name="likelion.project.agijagi.sellermypage.SellerProductDetailFragment"
         android:label="fragment_seller_product_detail"
-        tools:layout="@layout/fragment_seller_product_detail" >
+        >
         <action
             android:id="@+id/action_sellerProductDetailFragment_to_productUpdateFragment"
             app:destination="@id/productUpdateFragment" />
@@ -168,7 +168,7 @@
         android:id="@+id/productDetailPreviewFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductDetailPreviewFragment"
         android:label="fragment_product_detail_preview"
-        tools:layout="@layout/fragment_product_detail_preview" >
+        >
         <action
             android:id="@+id/action_productDetailPreviewFragment_to_productListFragment"
             app:destination="@id/productListFragment" />
@@ -177,17 +177,17 @@
         android:id="@+id/productListFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductListFragment"
         android:label="fragment_product_list"
-        tools:layout="@layout/fragment_product_list" />
+         />
     <fragment
         android:id="@+id/productUpdateFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductUpdateFragment"
         android:label="fragment_product_update"
-        tools:layout="@layout/fragment_product_update" />
+         />
     <fragment
         android:id="@+id/purchaseCompleteFragment"
         android:name="likelion.project.agijagi.purchase.PurchaseCompleteFragment"
         android:label="fragment_purchase_complete"
-        tools:layout="@layout/fragment_purchase_complete" >
+        >
         <action
             android:id="@+id/action_purchaseCompleteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -196,7 +196,7 @@
         android:id="@+id/deliveryTrackingFragment"
         android:name="likelion.project.agijagi.deliverytracking.DeliveryTrackingFragment"
         android:label="fragment_delivery_tracking"
-        tools:layout="@layout/fragment_delivery_tracking" >
+        >
         <action
             android:id="@+id/action_deliveryTrackingFragment_to_orderFragment"
             app:destination="@id/orderFragment" />
@@ -239,7 +239,7 @@
         android:id="@+id/productAddFragment"
         android:name="likelion.project.agijagi.sellermypage.ProductAddFragment"
         android:label="fragment_product_add"
-        tools:layout="@layout/fragment_product_add" >
+         >
         <action
             android:id="@+id/action_productAddFragment_to_productDetailPreviewFragment"
             app:destination="@id/productDetailPreviewFragment" />
@@ -253,7 +253,7 @@
         android:id="@+id/userChatRoomFragment"
         android:name="likelion.project.agijagi.userchat.UserChatRoomFragment"
         android:label="fragment_user_chat_room"
-        tools:layout="@layout/fragment_user_chat_room" >
+         >
         <action
             android:id="@+id/action_userChatRoomFragment_to_userChatListFragment"
             app:destination="@id/userChatListFragment" />
@@ -262,7 +262,11 @@
         android:id="@+id/loginFragment"
         android:name="likelion.project.agijagi.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_signupSelectFragment"
+            app:destination="@id/signupSelectFragment" />
+    </fragment>
     <fragment
         android:id="@+id/signupSellerFragment"
         android:name="likelion.project.agijagi.signup.SignupSellerFragment"
@@ -285,12 +289,12 @@
     <fragment
         android:id="@+id/categoryDetailInfoListFragment"
         android:name="likelion.project.agijagi.category.CategoryDetailInfoListFragment"
-        android:label="CategoryDetailInfoListFragment" >
+        >
         <action
             android:id="@+id/action_categoryDetailInfoListFragment_to_productDetailFragment"
-            app:destination="@id/productDetailFragment" />
+            />
         <action
             android:id="@+id/action_categoryDetailInfoListFragment_to_customProductDetailFragment"
-            app:destination="@id/customProductDetailFragment" />
+            />
     </fragment>
 </navigation>
