Design: Order 화면 수정 #6 마지막아이템 바텀마진 추가 화면이동 수정 ID 수정

--- a/agijagi/app/src/main/res/layout/item_order.xml
+++ b/agijagi/app/src/main/res/layout/item_order.xml
@@ -117,7 +117,7 @@
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button"
+            android:id="@+id/buttonOrderChat"
             android:layout_width="96dp"
             android:layout_height="22dp"
             android:layout_marginTop="12dp"
